# RPI-GPIO

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md
gpiocli/: CMakeLists.txt  main.cpp
gpiocli/rsc/: version.h
lib/: CMakeLists.txt  Makefile
lib/include/: RPI-GPIO.h  gpio.h  memory.h
lib/include/RPI-GPIO/: RPI-GPIO.h  exceptions.h  gpio.h  memory.h
lib/src/: exceptions.cpp  gpio.cpp  main.cpp  memory.cpp
test/: CMakeLists.txt  Makefile  main.cpp
test/src/: main.cpp
